docs/v1.3.0/zh/api/campaign/MbEvent.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `MbEvent`
- [← 本领域 / 返回 campaign](./)
- [↑ API 目录](../)
- [🏠 首页 v1.3.0](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# MbEvent

**Namespace:** TaleWorlds.CampaignSystem
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class MbEvent : IMbEvent`
**Base:** `IMbEvent`
**File:** `TaleWorlds.CampaignSystem/MbEvent.cs`

## 概述

`MbEvent` 位于 `TaleWorlds.CampaignSystem`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### AddNonSerializedListener
`public void AddNonSerializedListener(object owner, Action action)`

**用途 / Purpose:** 向当前集合/状态中添加 `non serialized listener`。

### Invoke
`public void Invoke()`

**用途 / Purpose:** 处理 `invoke` 相关逻辑。

### ClearListeners
`public void ClearListeners(object o)`

**用途 / Purpose:** 处理 `clear listeners` 相关逻辑。

## 使用示例

```csharp
var value = new MbEvent();
value.AddNonSerializedListener(owner, action);
```

## 参见

- [完整类目录](../catalog)